--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,12 @@
 projectName         = javalib-template
 projectVersion      = 0.1.0
 projectGroup        = io.github.mawngo
+projectGit          = github.com/mawngo/javalib-template
 
 # About
-aboutPage           = https://github.com/mawngo/javalib-template
+#aboutPage          = https://github.com/mawngo/javalib-template
+aboutName           = Java Library Template
+aboutDescription    = Template for creating java library
 aboutDeveloperId    = mawngo
 aboutDeveloperName  = Nguyen Toan
 aboutDeveloperEmail = sitdownrightnow.dev@gmail.com
